# embedded-memory

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: INSTALL.md  plugin.json
.codex/: INSTALL.md
.opencode/: INSTALL.md  plugin.json
docs/plans/: 2026-01-19-embedded-memory-v0.1-design.md
schemas/: compile_request.schema.json  compile_response.schema.json
skills/using_embedded_memory/: SKILL.md
src/embedded_memory/: cli.py  semver.py  store.py
src/embedded_memory/schemas/: compile_request.schema.json  compile_response.schema.json  observation.schema.json
